--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stagewise/toolbar-next": "^0.4.4",
+    "@vis.gl/react-google-maps": "^1.5.3",
     "autoprefixer": "^10.0.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
@@ -17,7 +18,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "tailwindcss": "^3.4.1"
+    "resend": "^4.6.0",
+    "tailwindcss": "^3.4.1",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@types/node": "^20",
