--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
     "@stagewise/toolbar-next": "^0.4.4",
     "@vis.gl/react-google-maps": "^1.5.3",
     "autoprefixer": "^10.0.1",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.3",
     "postcss": "^8",
     "react": "^18",
+    "react-compare-image": "^3.5.5",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "resend": "^4.6.0",
+    "sharp": "^0.34.2",
     "tailwindcss": "^3.4.1",
     "zod": "^3.25.64"
   },
   "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "15.3.3",
     "typescript": "^5"
   }
 }
