--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@stagewise/toolbar-next": "^0.4.4",
+    "@vercel/speed-insights": "^1.2.0",
     "@vis.gl/react-google-maps": "^1.5.3",
     "autoprefixer": "^10.0.1",
     "body-scroll-lock": "^4.0.0-beta.0",
